remove product publishing, add archiving