@@ -4,7 +4,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class MapProductStorage implements ProductStorage {
     private final Map<Long, ProductData> products;
@@ -20,15 +19,29 @@ public class MapProductStorage implements ProductStorage {
 
     @Override
     public ProductData save(ProductData product) {
-        this.products.put(product.getId(), product);
-        return product;
+        Long productId = (product.getId() == null) ? generateId() : product.getId();
+
+        ProductData newProduct = new ProductData(productId, product.getName(), product.getPrice());
+        newProduct.setImageUrl(product.getImageUrl());
+        newProduct.setArchived(product.isArchived());
+
+        this.products.put(productId, newProduct);
+        return newProduct;
     }
 
     @Override
     public List<ProductData> allPublished() {
         return this.products.values()
                 .stream()
-                .filter((productData -> productData.isPublished()))
-                .collect(Collectors.toList());
+                .filter((pd -> !pd.isArchived()))
+                .toList();
+    }
+
+    private Long generateId() {
+        Long id = 1L;
+        while(products.get(id) != null) {
+            id++;
+        }
+        return id;
     }
 }
